Version 4.7.3 - 2016-06-??

* mirror: don't add source directory base name to the target if the source
  ends with a slash.
* mirror: fixed transfer count tracking in --scan-all-first mode
* fixed "kill all" to remove queued commands.
* fixed xfer:log-file setting to a writable file in a protected directory.
* fixed xfer:clobber to allow output to non-plain files.

Version 4.7.2 - 2016-05-18

* ftp: fixed loss of 17th file from MLSD listing.
* new setting xfer:timeout.
* ssl: improved ssl performance for small read sizes.
* pget: allocate all needed disk space at once.
* http: new settings http:use-range and hftp:use-range.
* http: fixed setting http:authorization.
* http: resolve redirections when getting files information.
* http: include X-OC-MTime header in PUT requests for OwnCloud.
* mirror: changed --Move option to keep source dir if it ends with a slash.
* mirror: fixed timestamp mirroring when the source site sends redirections.
* mirror: don't report errors when the target does not support chmod.
* torrent: discard cached data after validating.
* torrent: fixed a coredump on a file read error.
* torrent: fixed closing oldest cached FD.
* torrent/DHT: fixed our external IP voting.
* torrent/DHT: black-list nodes which change node_id often.
* torrent/DHT: black-list nodes which report many bad nodes.
* torrent/DHT: ignore nodes with our own ID.
* torrent/DHT: made node search more robust.
* torrent/DHT: mark new nodes as questionable.
* translations updated (zh_TW, ru).

Version 4.7.1 - 2016-04-04

* http: fixed authentication for proxy, transient errors, max-retries=1.
* http: fixed put with authentication not to use HEAD request.
* translations updated (cs, ru).

Version 4.7.0 - 2016-03-28

* ftp: add MODE Z support.
* ftp: new settings ftp:use-mode-z, ftp:compressed-re, ftp:mode-z-level.
* ftp: add MFF support for chmod.
* ftp: prefer EPSV by default.
* ftp: prefer CWD-relative paths.
* ftp: enable MLSD by default (when supported).