@@ -6,6 +6,7 @@ Version 4.7.3 - 2016-06-??
 * fixed "kill all" to remove queued commands.
 * fixed xfer:log-file setting to a writable file in a protected directory.
 * fixed xfer:clobber to allow output to non-plain files.
+* fixed mirror --Move to really keep source dir if it ends with a slash.
 
 Version 4.7.2 - 2016-05-18
 
